# financecli

./: README.md  pyproject.toml
stockcli/: README.md  pyproject.toml
stockcli/stockcli/: main.py
stockcli/tests/: test_stockcli.py
